--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+	
     <meta charset="utf-8">
     <title>Blog Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="file:///C|/Users/rjrog/Documents/Coding/udacity-git-course/css/app.css">
 </head>
 <body>
-
-    <script src="js/app.js"></script>
+<header>
+    <h1>Expedition</h1>
+</header>
+    <script src="file:///C|/Users/rjrog/Documents/Coding/udacity-git-course/js/app.js"></script>
 </body>
 </html>
